# steam-screenshot-organizer

./: .gitattributes  .rustfmt.toml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  logo.afdesign  resources.rc
.github/workflows/: cicd.yaml
src/: main.rs  steam.rs  update_handler.rs
