[package]
name = "steam-screenshot-organizer"
version = "0.5.0"
edition = "2021"
authors = ["Noah Dunbar <noah@noahdunbar.com>"]

[dependencies]
notify = "6.1.1"
reqwest = { version = "0.12.5", features = ["blocking", "json"] }
serde = { version = "1.0.203", features = ["derive"] }
serde-xml-rs = "0.6.0"

[target.'cfg(windows)'.dependencies]
win32utils = "0.1.0"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58.0"
features = [
  "Win32_Foundation",
  "Win32_Security",
  "Win32_Storage_FileSystem",
  "Win32_System_Console",
  "Win32_System_Registry",
  "Win32_UI_WindowsAndMessaging",
]

[profile.release]
lto = true
codegen-units = 1
opt-level = "z"
strip = "symbols"
debug = false
debug-assertions = false
